@@ -15,6 +15,9 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+5/23/14
+    - Added case5.m, a 5-bus, 5-generator example case from Rui Bo.
+
 5/6/14
     - Modified savecase() to automatically add a comment line
       with the function name, and make sure the name is converted
